# AI-powered-resume-screening-with-UI

./: README.md
resume-screening-ui/: package-lock.json  package.json
resume-screening-ui/src/: App.jsx  index.css
resume-screening-ui/src/components/ui/: card.jsx  input.jsx  textarea.jsx
resume_screening/: .env  Dockerfile  pyproject.toml  setup.py
resume_screening/resume_screening/: api.py  config.py  main.py
resume_screening/resume_screening/agents/: resume_agents.py
resume_screening/resume_screening/models/: request_models.py  response_models.py
resume_screening/resume_screening/services/: file_service.py  resume_parser.py
resume_screening/resume_screening/tasks/: resume_tasks.py
